--- a/templates/dataclasses/%namespace/%name_%version/%sub/types/_enum.py.j2
+++ b/templates/dataclasses/%namespace/%name_%version/%sub/types/_enum.py.j2
@@ -1,9 +1,9 @@
-class {{ enum.name }}({{ p }}.Enum):
-    r"""{{ enum.meta.doc|rst(indent=4) }}"""
-    {% if enum.enum_pb.HasField("options") %}
-    _pb_options = {{ enum.options_dict }}
-    {% endif %}
+class {{ enum.name }}(Enum):
+    r"""{{ enum.meta.doc | rst(indent=4) }}"""
+
     {% for enum_value in enum.values %}
+    {{ '# ' + enum_value.meta.doc if enum_value.meta.doc else '' }}
     {{ enum_value.name }} = {{ enum_value.number }}
+
     {% endfor %}
 {{ '\n\n' }}
