--- a/templates/dataclasses/%namespace/%name_%version/%sub/types/_message.py.j2
+++ b/templates/dataclasses/%namespace/%name_%version/%sub/types/_message.py.j2
@@ -1,26 +1,21 @@
-class {{ message.name }}({{ p }}.Message):
-    r"""{{ message.meta.doc|rst(indent=4) }}
-    {% if message.fields|length %}
+@dataclasses.dataclasses
+class {{ message.name }}:
+    r"""{{ message.meta.doc | rst(indent=4) }}"""
 
-    {# Only include note if a oneof has more than one member field. #}
-    {% if message.oneof_fields() %}
-    {% if message.oneof_fields().values() | map('length') | max > 1 %}
-    This message has oneof_ fields (mutually exclusive fields).
-    For each oneof, at most one member field can be set at the same time.
-    Setting any member of the oneof automatically clears all other
-    members.
-
-    {% endif %}
-    .. _oneof: https://proto-plus-python.readthedocs.io/en/stable/fields.html#oneofs-mutually-exclusive-fields
-
-    {% endif %}
-    Attributes:
+    {# Iterate over fields. -#}
     {% for field in message.fields.values() %}
-        {{ field.name }} ({{ field.ident.sphinx }}):
-            {{ field.meta.doc|rst(indent=12, nl=False) }}
-    {% endfor %}
+    {#- Handle Where Field is of Type Map -#}
+    {%- if field.map -%}
+    {% with key_field = field.message.fields['key'], value_field = field.message.fields['value'] %}
+    {{ field.name}}: OrderDict[{{ key_field.type.python_type.__name__ }}, {{ value_field.type.python_type.__name__ }}] = field(default_factory=OrderedDict)
+    {% endwith %}
+    {% else %}
+
+    {{ field.name }}: {% if field.repeated %}Tuple[{% endif %}{% if field.enum or field.message %}{{ field.type.ident.rel(message.ident) }}{% else %}{{ field.type.python_type.__name__ }}{% endif %}{% if field.repeated %}] = field(default_factory=Tuple){% endif %}
+
     {% endif %}
-    """
+    {% endfor %}{# for field in message.fields.values #}
+
     {# Iterate over nested enums. -#}
     {% for enum in message.nested_enums.values() %}
         {% filter indent(first=True) %}
@@ -36,57 +31,5 @@ class {{ message.name }}({{ p }}.Message):
         {% endfilter %}{% endwith %}
         {% endif %}
     {% endfor %}
-
-    {% if "next_page_token" in message.fields.values()|map(attribute='name') %}
-    @property
-    def raw_page(self):
-        return self
-    {% endif %}
-
-    {# Iterate over fields. -#}
-    {% for field in message.fields.values() %}
-    {% if field.map %}
-    {% with key_field = field.message.fields['key'], value_field = field.message.fields['value'] %}
-    {{ field.name }} = {{ p }}.MapField(
-        {{ p }}.{{ key_field.proto_type }},
-        {{ p }}.{{ value_field.proto_type }},
-        number={{ field.number }},
-    {% if value_field.enum or value_field.message %}
-        {{ value_field.proto_type.lower() }}={{ value_field.type.ident.rel(message.ident) }},
-    {% endif %}{# enum or message#}
-    )
-    {% endwith %}
-    {% else %}{# field.map #}
-    {{ field.name }} = {{ p }}.{% if field.repeated %}Repeated{% endif %}Field(
-        {{ p }}.{{ field.proto_type }},
-        number={{ field.number }},
-    {% if field.proto3_optional %}
-        optional=True,
-    {% elif field.oneof %}
-        oneof='{{ field.oneof }}',
-    {% endif %}
-    {% if field.enum or field.message %}
-        {{ field.proto_type.lower() }}={{ field.type.ident.rel(message.ident) }},
-    {% endif %}{# enum or message #}
-    )
-    {% endif %}{# field.map #}
-    {% endfor %}{# for field in message.fields.values#}
-
-    {% if message.extended_operation_status_field %}
-    {% with status_field = message.extended_operation_status_field %}
-    @property
-    def done(self) -> bool:
-        """Return True if the backing extended operation is completed, False otherwise."""
-        {% if status_field.enum %}
-        return self.{{ status_field.name }} == type(self.{{ status_field.name }}).DONE
-        {% elif status_field.is_primitive and status_field.type.python_type == str %}
-        return self.{{ status_field.name }} == "DONE"
-        {% elif status_field.is_primitive and status_field.type.python_type == bool %}
-        return self.{{ status_field.name }}
-        {% else %}
-        raise ValueError("Unexpected type for field {{ status_field.name }}: {{ status_field.type }}")
-        {% endif %}
-    {% endwith %}
-    {% endif %}
 
 {{ '\n\n' }}
