--- a/templates/dataclasses/%namespace/%name_%version/%sub/types/_message.py.j2
+++ b/templates/dataclasses/%namespace/%name_%version/%sub/types/_message.py.j2
@@ -4,13 +4,14 @@ class {{ message.name }}:
 
     {# Iterate over fields. -#}
     {% for field in message.fields.values() %}
-    {#- Handle Where Field is of Type Map -#}
+    {# Injects Attribute Comment #}
+    {{ "# " + field.meta.doc if field.meta.doc else '' | rst(indent=4) }}
+    {# Handle Where Field is of Type Map -#}
     {%- if field.map -%}
     {% with key_field = field.message.fields['key'], value_field = field.message.fields['value'] %}
     {{ field.name}}: OrderDict[{{ key_field.type.python_type.__name__ }}, {{ value_field.type.python_type.__name__ }}] = field(default_factory=OrderedDict)
     {% endwith %}
     {% else %}
-
     {{ field.name }}: {% if field.repeated %}Tuple[{% endif %}{% if field.enum or field.message %}{{ field.type.ident.rel(message.ident) }}{% else %}{{ field.type.python_type.__name__ }}{% endif %}{% if field.repeated %}] = field(default_factory=Tuple){% endif %}
 
     {% endif %}
